# product-ai-agent

./: .env.example  .gitignore  .~lock.product-ai-agent-client-presentation.pptx#  README.md  UPGRADE_GUIDE.md  agents.md  generate_client_presentation.py  main.py  package-lock.json  product-ai-agent-client-presentation.odp  pyproject.toml  requirements.txt  tmp_gemini_pricing_http_debug.py  tmp_gemini_pricing_raw.py
app/: __init__.py  auth.py  config.py  main.py
app/agents/: amazon_agent.py  attribute_mapper_agent.py  core_agent.py  ebay_agent.py  etsy_agent.py  image_agent.py  product_optimization_agent.py  restock_agent.py  seo_agent.py  shopify_agent.py  tiktok_agent.py  vision_agent.py
app/api/: forecasting.py  repricing.py  routes.py
app/core/: exceptions.py
app/orchestrator/: __init__.py  agent_graph.py  pipeline.py
app/providers/: amazon_provider.py  base.py  factory.py  kaggle_provider.py
app/schemas/: forecasting.py  imports.py  repricing.py  request.py  response.py
app/services/: amazon_dataset_research_service.py  cloudinary_service.py  csv_parser.py  ebay_market_research_service.py  forecasting_engine.py  gemini_service.py  image_service.py  import_service.py  import_store.py  market_research_service.py  mongo_import_store.py  mongo_product_store.py  ollama_service.py  openai_service.py  output_service.py  pricing_service.py  product_import_service.py  product_service.py  product_store.py  publish_target_job_store.py  repricing_engine.py  s3_service.py  search_price_research_service.py  validation_service.py
app/utils/: product_text.py  prompts.py
scripts/: convert_m5_dataset.py
templates/: amazon_seller_bulk_upload_demo.README.md  amazon_seller_bulk_upload_demo.csv  forecast_sales_upload_demo.csv  product_bulk_import_demo.csv
tests/: test_agents.py  test_api.py  test_forecasting.py  test_pipeline.py  test_repricing.py
