[project]
name = "product-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "openai>=2.26.0",
    "pillow>=11.2.1",
    "PyJWT>=2.10.1",
    "pymongo>=4.13.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
